# x2strategy

./: .env.example  .gitignore  README.md  README_CN.md  SKILL.md  pyproject.toml  requirements.txt
assets/: backtrader_template.py
docs/: ARCHITECTURE.md
examples/: pairs_trading_content.json  pairs_trading_content.md  pairs_trading_spec.json  pairs_trading_spec.md  tactical_aa_content.json  tactical_aa_content.md  tactical_aa_spec.json  tactical_aa_spec.md  value_momentum_content.json  value_momentum_content.md  value_momentum_spec.json  value_momentum_spec.md
examples/upsa/: README.md  universal_portfolio_shrinkage_approximation.py  upsa_content.json  upsa_content.md  upsa_metadata.json  upsa_operator_pitfall_context.md  upsa_spec.json  (+2 more)
paper2spec/: __init__.py  clickhouse.py  config.py  extractor.py  llm.py  models.py  ocr.py  operator_pitfall.py  parser.py  paths.py  pdf_utils.py  prompts.py  render.py  search.py
references/: backtrader_patterns.md  clickhouse.md  data_sources.md  extraction_quality.md  indicator_cookbook.md  paper2spec.md  paper_conventions.md  skill-internals.md  spec2code.md
schemas/: data_requirements.schema.json  paper_content.schema.json  strategy_spec.schema.json
scripts/: analyze.py  backtest.py  discover_clickhouse.py  extract.py  extract_requirements.py  generate.py  generate_schemas.py  operator_pitfalls.py  parse.py  render_run_config.py  run_full_tests.sh  search.py  setup_skill_link.sh  validate_extraction.py  validate_replication.py  validate_strategy.py
spec2code/: __init__.py  analyzer.py  config.py  executor.py  models.py  prompts.py  validator.py
tests/: conftest.py  test_analyzer.py  test_clickhouse.py  test_e2e.py  test_examples.py  test_executor.py  test_extract_requirements.py  test_extractor.py  test_models.py  test_parser.py  test_real_e2e.py  test_render.py  test_spec2code_models.py  test_utils_canonical_usage.py  test_utils_config.py  test_utils_data.py  test_utils_metrics.py  test_utils_plot.py  test_utils_portfolio.py  test_utils_quantile.py  test_utils_regressions.py  test_validate_extraction.py  test_validate_replication.py  test_validate_strategy.py  test_validator.py
utils/: INDEX.md  __init__.py  config.py  data.py  metrics.py  plot.py  plot_config.py  portfolio.py  quantile.py  regressions.py
(+7 files in other folders)
