[project]
name = "paper2spec"
version = "0.3.0"
description = "Extract structured strategy specifications from quantitative finance research papers"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.40",
    "PyMuPDF>=1.24",
    "pymupdf4llm>=0.0.10",
]

[project.optional-dependencies]
agent = [
    "langchain-community>=0.2",
    "langchain-text-splitters>=0.2",
    "sentence-transformers>=2.2",
    "faiss-cpu>=1.7",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["paper2spec"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "network: requires internet access",
    "slow: takes >5s",
    "real: real API calls (costs credits, requires DEEPSEEK_API_KEY)",
]
