[project]
name = "x2strategy"
version = "0.4.0"
description = "End-to-end: quantitative finance research paper → strategy specification → executable Backtrader code → backtest → diagnosis"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
dependencies = [
    "backtrader>=1.9.78.123",
    "clickhouse-driver>=0.2.10",
    "litellm>=1.40",
    "matplotlib>=3.11.0",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "pyarrow>=24.0.0",
    "PyMuPDF>=1.24",
    "pymupdf4llm>=0.0.10",
    "python-dotenv>=1.0",
    "yfinance>=1.2.0",
]

[project.optional-dependencies]
agent = [
    "langchain-community>=0.2",
    "langchain-text-splitters>=0.2",
    "sentence-transformers>=2.2",
    "faiss-cpu>=1.7",
]
codegen = [
    "backtrader>=1.9",
    "yfinance>=0.2",
    "akshare>=1.10",
]
docx = [
    "python-docx>=1.0",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["paper2spec", "spec2code"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "network: requires internet access",
    "slow: takes >5s",
    "real: real API calls (costs credits, requires DEEPSEEK_API_KEY)",
]
